--- a/frontend/app/assets/index.html
+++ b/frontend/app/assets/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Augur</title>
-    <link rel="stylesheet" href="static/app.css">
+    <link rel="stylesheet" href="/static/app.css">
 
-    <script src="static/vendor.js"></script>
+    <script src="/static/vendor.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.12.2/d3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/metrics-graphics/2.12.0/metricsgraphics.js"></script>
     
-    <script src="static/app.js"></script>
+    <script src="/static/app.js"></script>
   </head>
   <body>
     <div id="app">
