--- a/frontend/app/assets/index.html
+++ b/frontend/app/assets/index.html
@@ -6,10 +6,7 @@
     <title>Augur</title>
     <link rel="stylesheet" href="/static/app.css">
 
-    <script src="/static/vendor.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.12.2/d3.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/metrics-graphics/2.12.0/metricsgraphics.js"></script>
-    
+    <script src="/static/vendor.js"></script>  
     <script src="/static/app.js"></script>
   </head>
   <body>
@@ -18,7 +15,7 @@
     </div>
     <script>
       
-      %% session_script %%
+      %% session_script|safe %%
 
       require('Augur.js').default()
     </script>
