--- a/util/scripts/install/index.html
+++ b/util/scripts/install/index.html
@@ -17,12 +17,8 @@
   <input type="text" name="user"><br>
   Password:<br>
   <input type="text" name="password"><br>
-  Key:<br>
-  <input type="text" name="key"><br><br>
-  Zombie ID:<br>
-  <input type="text" name="zombie_id"><br><br>
   GitHub API Key:<br>
-  <input type="text" name="github_api_key"><br>
+  <input type="text" name="key"><br>
   <input type="submit" value="Submit" onclick="saveConfigValues()">
  </form> 
 </center> 
